--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.ydcun.hadoop.student</groupId>
-  <artifactId>hadoopHdfs</artifactId>
+  <artifactId>hadoop-student</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>hadoopHdfs</name>
+  <name>hadoop-student</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -30,4 +30,31 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
+    <build>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.7</version>
+          <executions>
+            <execution>
+              <id>hadoop remote run</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>run</goal>
+              </goals>
+              <configuration>
+                <target name="test">
+                  <exec dir="${basedir}/shell" executable="bash">
+                    <arg value="deploy.sh"></arg>
+                  </exec>
+                </target>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+  </build>
 </project>
