--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <hadoop.version>2.7.5</hadoop.version>
     <java.version>1.8</java.version>
+    <hiver.version>2.3.2</hiver.version>
   </properties>
 
   <dependencies>
@@ -23,7 +24,21 @@
       <artifactId>hadoop-client</artifactId>
       <version>${hadoop.version}</version>
     </dependency>
-    <dependency>
+
+      <dependency>
+          <groupId>org.apache.hive</groupId>
+          <artifactId>hive-jdbc</artifactId>
+          <version>${hiver.version}</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-exec -->
+      <dependency>
+          <groupId>org.apache.hive</groupId>
+          <artifactId>hive-exec</artifactId>
+          <version>${hiver.version}</version>
+      </dependency>
+
+
+      <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
